# rust-example-futures

./: Cargo.toml  README.md
src/: main.rs
src/examples/: errors.rs  future_chains.rs  future_chains_2.rs  lifetimes.rs  mod.rs  ooo.rs  results_async.rs  results_basic.rs  results_chain.rs
