[package]
name = "rust-example-futures"
version = "0.1.0"
authors = ["Stephen Stack <sfstack7500@gmail.com>"]
edition = "2018"

[dependencies]
futures="0.1.25"
rand = "0.6.5"
actix = "0.8"
actix-rt = "0.2.2"
actix-web = { version = "1.0.0", features = ["rust-tls", "ssl"] }
actix-http = { version = "0.2.4", features=["ssl"] }
actix-http-test = { version = "0.2.0", features=["ssl"] }
